--- a/Sources/Blazor.Monaco.Playground.Web/Pages/_Host.cshtml
+++ b/Sources/Blazor.Monaco.Playground.Web/Pages/_Host.cshtml
@@ -23,7 +23,7 @@
 </app>
 
 
-<script src="_content/Blazor.Monaco/app.bundle.js"></script>
+<script src="_content/Blazor.Monaco/js/monaco.bundle.js"></script>
 <script src="_framework/blazor.server.js"></script>
 </body>
 </html>
