Rename to BlazorMonacoEditor

--- a/Sources/BlazorMonacoEditor.Playground/App.razor
+++ b/Sources/BlazorMonacoEditor.Playground/App.razor
@@ -1,4 +1,4 @@
-﻿@using Blazor.Monaco.Playground.Shared
+﻿@using BlazorMonacoEditor.Playground.Shared
 
 <Router AppAssembly="@typeof(App).Assembly">
     <Found Context="routeData">
