--- a/Sources/BlazorMonacoEditor/MonacoEditor.razor
+++ b/Sources/BlazorMonacoEditor/MonacoEditor.razor
@@ -1,4 +1,5 @@
-﻿@inject MonacoInterop MonacoInterop
+﻿@using BlazorMonacoEditor.Interop
+@inject MonacoInterop MonacoInterop
 @inject ILogger<MonacoEditor> Logger
 
 <div @ref="monacoContainer" class="monaco-editor-container"></div>
