--- a/Sources/BlazorMonacoEditor.Playground.Web/Pages/_Host.cshtml
+++ b/Sources/BlazorMonacoEditor.Playground.Web/Pages/_Host.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "/index"
-@using Blazor.Monaco.Playground
+@using BlazorMonacoEditor.Playground
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
@@ -11,8 +11,8 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <base href="~/" />
-    <link rel="icon" type="image/png" href="_content/Blazor.Monaco.Playground/favicon.png"/>
-    <link href="_content/Blazor.Monaco.Playground/css/app.css" rel="stylesheet"/>
+    <link rel="icon" type="image/png" href="_content/BlazorMonacoEditor.Playground/favicon.png"/>
+    <link href="_content/BlazorMonacoEditor.Playground/css/app.css" rel="stylesheet"/>
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
 
@@ -23,7 +23,7 @@
 </app>
 
 
-<script src="_content/Blazor.Monaco/js/monaco.bundle.js"></script>
+<script src="_content/BlazorMonacoEditor/js/monaco.bundle.js"></script>
 <script src="_framework/blazor.server.js"></script>
 </body>
 </html>
