--- a/Sources/BlazorMonacoEditor.Playground/Pages/Index.razor
+++ b/Sources/BlazorMonacoEditor.Playground/Pages/Index.razor
@@ -1,4 +1,5 @@
 ﻿@page "/"
+@using BlazorMonacoEditor.Interop
 
 <MonacoEditor Uri="@(new Uri("inmemory://test.cs"))" 
               LanguageId="csharp"
