--- a/Sources/BlazorMonacoEditor.Playground.Web/Pages/_Host.cshtml
+++ b/Sources/BlazorMonacoEditor.Playground.Web/Pages/_Host.cshtml
@@ -12,6 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <base href="~/" />
     <link rel="icon" type="image/png" href="_content/BlazorMonacoEditor.Playground/favicon.png"/>
+    <link href="_content/BlazorMonacoEditor.Playground/css/bootstrap.css" rel="stylesheet"/>
     <link href="_content/BlazorMonacoEditor.Playground/css/app.css" rel="stylesheet"/>
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
