--- a/Sources/BlazorMonacoEditor.Playground/Pages/Index.razor
+++ b/Sources/BlazorMonacoEditor.Playground/Pages/Index.razor
@@ -1,9 +1,8 @@
 ﻿@page "/"
-@using BlazorMonacoEditor.Interop
 @using BlazorMonacoEditor.Services
-@using Microsoft.CodeAnalysis.Text
-@using ReactiveUI
+@using BlazorMonacoEditor.Roslyn.Scaffolding
 @inject IMonacoInterop MonacoInterop
+@inject IndexViewModel DataContext
 
 <div class="m-2">
     <div class=" d-flex my-1 gap-1">
@@ -22,8 +21,23 @@
             <label for="showMap" class="col-form-label mx-1">Show Map</label>
         </div>
 
+
         <div class="input-group">
-            <button id="addCompletionProvider" onclick="@(async () => { await MonacoInterop.RegisterCompletionProvider("csharp", DataContext); })">Register CompletionProvider</button>
+            <select @bind="@DataContext.DocumentIdAsString"
+                    class="form-control flex-shrink-1">
+                @foreach (var documentId in DataContext.Documents)
+                {
+                    <option value="@(DocumentIdTypeConverter.Instance.ConvertToString(documentId))">
+                        @documentId
+                    </option>
+                }
+            </select>
+            <button id="addDocument" onclick="@(async () => { DataContext.DocumentId = DataContext.AddDocument().Id; })">Add</button>
+        </div>
+
+
+        <div class="input-group">
+            <button id="addCompletionProvider" onclick="@(async () => { await MonacoInterop.RegisterCompletionProvider(DataContext.CompletionProvider); })">Register CompletionProvider</button>
         </div>
 
         <select @bind="@DataContext.Theme"
@@ -54,20 +68,10 @@
 
 @if (DataContext.IsVisible)
 {
-    <MonacoEditor @bind-LanguageId="@DataContext.LanguageId"
-                  Theme="@DataContext.Theme"
-                  @bind-Text="@DataContext.SourceCode"
+    <MonacoEditor Theme="@DataContext.Theme"
+                  @bind-LanguageId="@DataContext.LanguageId"
+                  @bind-SourceText="@DataContext.SourceCode"
+                  Path="@(DataContext.DocumentId != null ? $"{DataContext.DocumentId.ProjectId.Id}/{DataContext.DocumentId.Id}" : null)"
                   ShowLineNumbers="@DataContext.ShowLineNumbers"
                   ShowCodeMap="@DataContext.ShowCodeMap"/>
-}
-
-@code {
-
-    public IndexViewModel DataContext { get; } = new();
-
-    protected override void OnInitialized()
-    {
-        base.OnInitialized();
-    }
-
 }
