--- a/Sources/BlazorMonacoEditor/MonacoTextBox.razor
+++ b/Sources/BlazorMonacoEditor/MonacoTextBox.razor
@@ -1,4 +1,5 @@
-﻿@using System.Reflection.Metadata
+﻿@using System.Reactive.Linq
+@using System.Reflection.Metadata
 @using System.Threading
 @using BlazorMonacoEditor.Scaffolding
 @using Microsoft.CodeAnalysis.Text
@@ -48,7 +49,9 @@
         public TextModelId Id { get; } = new($"TextBox-{Guid.NewGuid()}");
     
         public string Path { get; init; } = "";
-    
+        
+        public IObservable<EventArgs> WhenChanged { get; } = Observable.Never<EventArgs>();
+
         public async Task<SourceText> GetTextAsync(CancellationToken cancellationToken = default)
         {
             return Text ?? SourceText.From("");
