Changed how editor loads up

--- a/Sources/BlazorMonacoEditor/MonacoEditor.razor
+++ b/Sources/BlazorMonacoEditor/MonacoEditor.razor
@@ -6,6 +6,7 @@
 @using System.Reactive
 @using System.Reactive.Linq
 @using System.Threading
+@using BlazorMonacoEditor.Services
 @inject MonacoInterop MonacoInterop
 @inject ILogger<MonacoEditor> Logger
 
